// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays an error message 1`] = `
<DocumentFragment>
  <div
    class="Alert Alert__error"
  >
    Error!
  </div>
</DocumentFragment>
`;

exports[`displays an success message 1`] = `
<DocumentFragment>
  <div
    class="Alert Alert__error"
  >
    Success!
  </div>
</DocumentFragment>
`;

exports[`does not render an error or success message if message props is empty 1`] = `<DocumentFragment />`;
